New branch develop

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </h2>
         <!--<a href="#">Quentin&nbsp;Lequeux</a>-->
         <ul class="nav">
-            <li>A&nbsp;propos
-                <ul>
+            <li class="dropdown">A&nbsp;propos
+                <ul class="dropdown-content">
                     <li><a href="#about" title="Vers la section coordonnées">Coordonnées</a></li>
                     <li><a href="#skills" title="Vers la section compétences">Compétences</a></li>
                     <li><a href="#projects" title="Vers la section réalisations">Réalisations</a></li>
