--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
                     Coordonnées
                 </h3>
                 <p>Numéro de téléphone&nbsp;:</p>
-                <span itemprop="telephone"><a href="" title="Appeler ce numéro">+32(0)473644221</a></span>
+                <span itemprop="telephone"><a href="#about" title="Appeler ce numéro">+32(0)473644221</a></span>
                 <p>Adresse email&nbsp;:</p>
-                <span itemprop="email"><a href="" title="Envoyer un email à cette adresse">quent789@gmail.com</a></span>
+                <span itemprop="email"><a href="#about" title="Envoyer un email à cette adresse">quent789@gmail.com</a></span>
                 <p>Adresse postale&nbsp;:</p>
-                <a href="https://www.google.com/maps/@50.536599,4.8562688,15z?entry=ttu" title="Ouvrir dans Google Maps"
+                <a href="https://www.google.com/maps/@50.536599,4.8562688,15z?entry=ttu" hreflang="fr" title="Ouvrir dans Google Maps"
                    itemscope itemtype="https://schema.org/PostalAddress"
                    itemprop="address"><span itemprop="streetAddress" title="">Rue de la brasserie 12b</span>, <span
                         itemprop="postalCode">5080</span> <span itemprop="addressLocality">Warisoulx</span> <span
@@ -129,7 +129,7 @@
     <section id="skills" itemscope itemtype="https://schema.org/Occupation" itemprop="hasOccupation">
         <div class="wrapper-skills">
             <div class="content-skills">
-                <img src="/img/hepl.png" alt="Logo de la Haute Ecole de la Province de Liège" width="150" height="80">
+                <img src="/img/hepl.png" alt="Logo de la Haute Ecole de la Province de Liège" width="160" height="76">
                 <h2 aria-level="2" role="heading">
                     Mes compétences
                 </h2>
@@ -243,7 +243,8 @@
                            hreflang="fr"
                            title="Vers le site Alsacréations">Qu'est-ce que Vite ?</a></li>
                 </ul>
-                <a href="https://www.alsacreations.com/home/0" title="Vers le site Alsacréations">Voir plus d'actualités</a>
+                <a href="https://www.alsacreations.com/home/0" title="Vers le site Alsacréations">Voir plus
+                    d'actualités</a>
             </div>
             <!--Animation cercle-->
         </div>
@@ -260,7 +261,7 @@
                 <li>Travail</li>
             </ul>
             <div>
-                <img src="./img/peche.jpg" alt="">
+                <img src="./img/peche.jpg" alt="" width="1029" height="500">
             </div>
             <div class="nav-hobbies">
                 <span>Pêche</span>
@@ -280,78 +281,73 @@
         <!--Logo-->
         <div class="exp-links">
             <a href="#exp">Formations</a>
-            <a href="#exp">Parcours</a> <!--Photos représentant la formation-->
+            <a href="#exp">Parcours</a> <!--Photos représentant la formation -->
         </div>
         <div class="timeline">
-            <div>
-                <p class="">2014-2015</p>
-                <p class="">7ème - CESS</p>
-                <p class="" itemprop="alumniOf">Institut d’enseignement des arts techniques sciences et artisanats -
+            <div class="exp-content">
+                <p class="bold">2014-2015</p>
+                <p class="bold">7ème - CESS</p>
+                <p class="bold" itemprop="alumniOf">Institut d’enseignement des arts techniques sciences et artisanats -
                     Namur</p>
                 <div class="status">
                 </div>
-                <p>Année d'obtention de mon <abbr title="Certificat d'enseignement secondaire supérieur">CESS</abbr> à
+                <p class="text">Année d'obtention de mon <abbr title="Certificat d'enseignement secondaire supérieur">CESS</abbr> à
                     l'Institut d’enseignement des arts techniques sciences et artisanats à Namur,
                     option création et restauration de meubles. Ainsi que mon diplôme de gestion de base.</p>
                 <a href="#exp">Lire la suite</a>
-                <!--background-image-->
-                <!--Pop-up-->
+                <!-- TODO Pop-up -->
             </div>
-            <div>
-                <p>2018-2019</p>
-                <p>7ème Assistant Métiers de la Prévention et de la Sécurité</p>
-                <p itemprop="alumniOf">Institut Provincial d'Enseignement Supérieur - Seilles</p>
+            <div class="exp-content">
+                <p class="bold">2018-2019</p>
+                <p class="bold">7ème Assistant Métiers de la Prévention et de la Sécurité</p>
+                <p class="bold" itemprop="alumniOf">Institut Provincial d'Enseignement Supérieur - Seilles</p>
                 <div class="status">
                 </div>
-                <p>Obtention de mon attestation de gardiennage, gardien de la paix et steward football ainsi que
+                <p class="text">Obtention de mon attestation de gardiennage, gardien de la paix et steward football ainsi que
                     plusieurs
                     formations telles que
-                    l'EPI (Equipier Première Intervention) et secourisme industriel.</p>
+                    l'<abbr title="Equipier Première Intervention">EPI</abbr> et secourisme industriel.</p>
                 <a href="#exp">Lire la suite</a>
-                <!--background-image-->
                 <!--Pop-up-->
             </div>
-            <div>
-                <p>2019-2022</p>
-                <p itemprop="jobTitle">Agent de sécurité</p>
-                <p itemprop="workLocation">Université du Luxembourg - Belval</p>
+            <div class="exp-content">
+                <p class="bold">2019-2022</p>
+                <p class="bold" itemprop="jobTitle">Agent de sécurité</p>
+                <p class="bold" itemprop="workLocation">Université du Luxembourg - Belval</p>
                 <div class="status">
                 </div>
-                <p>Juillet 2019 à Janvier 2022
+                <p class="text">Juillet 2019 à Janvier 2022
                     Agent de sécurité à l'Université du Luxembourg (Belval) pour la société <span itemprop="worksFor">Dussmann Security</span>.
                     J'ai effectué des tâches tels que la
-                    réception, contrôle d'accès, surveillance caméra, gestion de logiciel intrusion,...</p>
+                    réception<!--, contrôle d'accès, surveillance caméra, gestion de logiciel intrusion,...--></p>
                 <a href="#exp">Lire la suite</a>
-                <!--background-image-->
                 <!--Pop-up-->
             </div>
-            <div>
-                <p>2022-2023</p>
-                <p>Bachelier Techniques Infographiques</p>
-                <p itemprop="alumniOf">Haute École de la Province de Liège - Seraing</p>
+            <div class="exp-content">
+                <p class="bold">2022-2023</p>
+                <p class="bold">Bachelier Techniques Infographiques</p>
+                <p class="bold" itemprop="alumniOf">Haute École de la Province de Liège - Seraing</p>
                 <div class="status">
                 </div>
-                <p itemscope itemtype="https://schema.org/Occupation" itemprop="hasOccupation">Première année de mon
+                <p class="text" itemscope itemtype="https://schema.org/Occupation" itemprop="hasOccupation">Première année de mon
                     bachelier en techniques infographiques.
                     Acquisitions de multiples compétences : HTML, CSS, Suite Adobe(<span
                             itemprop="skills">Photoshop</span>,
-                    <span>Illustrator</span>, <span>Premiere</span>, <span>Xd</span>) <span>Maya</span>,
+                    <span>Illustrator</span>, <span>Premiere Pro</span>, <span>Xd</span>) <span>Maya</span>,
                     <span>Typographie</span></p>
                 <a href="#exp">Lire la suite</a>
-                <!--background-image-->
                 <!--Pop-up-->
             </div>
-            <div>
-                <p>2023-2024</p>
-                <p>Bachelier Techniques Infographiques option Web</p>
-                <p>Haute École de la Province de Liège - Seraing</p>
+            <div class="exp-content">
+                <p class="bold">2023-2024</p>
+                <p class="bold">Bachelier Techniques Infographiques option Web</p>
+                <p class="bold">Haute École de la Province de Liège - Seraing</p>
                 <div class="status">
                 </div>
-                <p>Deuxième année de mon bachelier en techniques infographiques
+                <p class="text">Deuxième année de mon bachelier en techniques infographiques
                     Acquisitions des compétences : MySQL, Javascript, PHP, Wordpress, Typescript</p>
                 <a href="#exp">Lire la suite</a>
                 <!--Pop-up-->
-                <!--background-image-->
             </div>
         </div>
         <!--Animation cercle-->
@@ -457,10 +453,12 @@
             </a>
         </div>
         <div class="logos-top">
-            <a href="https://www.hepl.be/fr" hreflang="fr" title="Vers le site web de la Haute Ecole de la Province de Liège"><img
+            <a href="https://www.hepl.be/fr" hreflang="fr"
+               title="Vers le site web de la Haute Ecole de la Province de Liège"><img
                     src="/img/hepl.png" alt="Logo de la Haute Ecole de la Province de Liège"></a>
-            <a href="https://www.provincedeliege.be/" hreflang="fr" title="Vers le site web de la Province de Liège"><img src="/img/liege.png"
-                                                                                                            alt="Logo de la Province de Liège"></a>
+            <a href="https://www.provincedeliege.be/" hreflang="fr"
+               title="Vers le site web de la Province de Liège"><img src="/img/liege.png"
+                                                                     alt="Logo de la Province de Liège"></a>
         </div>
         <div class="copyright">
             <p>
@@ -527,7 +525,8 @@
                     </g>
                 </svg>
             </a>
-            <a href="https://www.adobe.com/be_fr/products/illustrator.html" hreflang="fr" title="Vers le site d'Adobe Illustrator">
+            <a href="https://www.adobe.com/be_fr/products/illustrator.html" hreflang="fr"
+               title="Vers le site d'Adobe Illustrator">
                 <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="48" height="48"
                      viewBox="0 0 240 234">
                     <path fill="#300"
